Finished the report

--- a/README
+++ b/README
@@ -46,4 +46,4 @@ If one wishes to further develop this code, such as adding more algorithms to tr
 ## Use of Generative AI
 
 GitHub Copilot's autocompletion feature was used in coding the project, when writing docstrings for the functions, though sometimes adding elements ourselves, and for repetitive parts of the code.
-ChatGPT was also used to help in debugging the code, by providing the traceback as a prompt when an error was difficult to understand, asking to explain what the error refers to.
+ChatGPT was also used to help in debugging the code, by providing the traceback as a prompt when an error was difficult to understand, asking to explain what the error refers to. Additionally, it was used to get to grips with using the ```zeus``` package. Asked how one could set a random seed but no conclusive answer was given. Asked how one could define a rolling window loop for indices, to use when computing the gelman rubin statistics and was proposed with ```for i in range(0, len(sequence) - window_size + 1, step_size):``` which was used in the function but with the n_samples argument instead of the ```len(sequence)```. Finally, a recurrent issue was the invalid log values encountered with the log likelihood, log posterior and log prior definitions, and was returned the idea of setting a safety threshold in case of invalid values.
